# learning-langchain

./: .gitignore  20140818-build_agent.ipynb  20240820-structured-data.ipynb  pyproject.toml  server.py
crash-course/: 10_chains_extended.py  11_chains_parallel.py  12_chains_branching.py  13_rag_basics_a.py  14_rag_basics_b.py  15_rag_basics_metadata_a.py  16_rag_basics_metadata_b.py  17_rag_text_splitting_deep_dive.py  1_chat_model_basic.py  2_chat_model_basic_conversation.py  3_chat_model_alternatives.py  4_chat_model_conversation_with_user.py  5_chat_model_save_message_history_firebase.py  6_prompt_template_basic.py  7_prompt_template_with_chat_model.py  8_chain_basics.py  9_chains_under_the_hood.py  README.md
crewai/: 20241128-customer-support.ipynb  20241128-research_write_article.ipynb  research_write_article.ipynb
langchain-academy/: 2_state_and_memory.ipynb  4_building_your_assistant.ipynb  5_research_assistant.ipynb  module_1.ipynb  module_2.ipynb  module_3.ipynb
langfuse/: 20241003-prompt_management.ipynb  20241003-quickstart.ipynb
langgraph/: 20241112-example.ipynb  20241113-reflection.ipynb  20241119-chatbot-with-memory.ipynb  20241119-chatbot-with-profile-schema.ipynb  20241119-trustcall.ipynb  20250221-recursion_limit.ipynb  20250310-multi-agent-collaboration.ipynb  20250311-langgraph_agentic_rag.ipynb  20250416-multi_agent_architecture.ipynb  20250416-understanding_langgraph.ipynb  20250424-simple-mcp-client.ipynb  20250430-agentic-rag.ipynb  agent_simulation.py  langgraph-research-agent.ipynb  math_server.py  weather_server.py
langserve/: 20240830-llm.py  20240830-retrieval.py  20240830-translate.py  client.ipynb
langsmith/: 20241002-langsmith_introduction.ipynb  20241003-prompt_iteration.ipynb  20241008-recap_langsmith_eval.ipynb  20241009-langsmith_eval_rag.ipynb
notebooks/: 20240816-build_chatbot.ipynb  20240816-build_simple_llm_application_with_lcel.ipynb  20240816-vectorstores_retrievers.ipynb  20240818-build_rag_app.ipynb  20240819-build_query_analysis_system.ipynb  20240819-get_started_with_langsmith.ipynb  20240820-agent-simulation-evaluation.ipynb  20240820-how-to-chain-runnables.ipynb  20240905-google-vertex-ai-search.ipynb  20240905-langsmith-rag-evaluation.ipynb  20240912-retry_parsing_error.ipynb  20241016-rag-flow.ipynb  20241022-langchain-book.ipynb  20241031-pgvector.ipynb  20250509-agent_engine.ipynb
openai/: 20241002-quickstart.ipynb  20241008-intro_to_gpt4o.ipynb  20241021-swarm.ipynb
test-mcp/: langgraph-mcp.py
(+21 files in other folders)
