[tool.poetry]
name = "learning-langchain"
version = "0.1.0"
description = ""
authors = ["Koichiro Mori <f2forest@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
beautifulsoup4 = "^4.12.3"
youtube-transcript-api = "^0.6.2"
pytube = "^15.0.0"
ipywidgets = "^8.1.3"
faiss-cpu = "^1.8.0.post1"
google-cloud-discoveryengine = "^0.12.2"
sentence-transformers = "^3.0.1"
openai = "^1.51.0"
ollama = "^0.3.3"
pandas = "^2.2.3"
langchain = "^0.3.3"
langchain-community = "^0.3.2"
langchain-openai = "^0.2.2"
langchain-anthropic = "^0.2.3"
langsmith = "^0.1.135"
langgraph = "^0.2.38"
docarray = "^0.40.0"
chromadb = "^0.5.13"
swarm = {git = "ssh://git@github.com/openai/swarm.git"}
gitpython = "^3.1.43"
langchain-experimental = "^0.3.2"
duckduckgo-search = "^6.3.2"
langgraph-checkpoint-sqlite = "^2.0.1"
streamlit = "^1.39.0"
langchain-postgres = "^0.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
