[project]
name = "learning-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "chromadb>=0.6.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "langchain>=0.3.18",
    "langchain-anthropic>=0.3.7",
    "langchain-cli>=0.0.35",
    "langchain-community>=0.3.17",
    "langchain-experimental>=0.3.4",
    "langchain-fireworks>=0.2.7",
    "langchain-openai>=0.3.4",
    "langchain-postgres>=0.0.13",
    "langfuse>=2.59.7",
    "langgraph>=0.2.70",
    "langgraph-checkpoint-sqlite>=2.0.3",
    "langserve>=0.3.1",
    "langsmith>=0.3.8",
    "matplotlib>=3.10.1",
    "pygraphviz>=1.14",
    "streamlit>=1.43.1",
    "tavily-python>=0.5.1",
]
